--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Document</title>
+    <title>Neuroscape About</title>
   </head>
   <body class="about">
     <header id="header" class="flex">
