--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Document</title>
+    <title>Research Team</title>
   </head>
   <body class="research">
     <header id="header" class="flex">
